creamos animaciones para el h1

--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dolares</title>
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <h1>Hola este es un sitio para fans de los dólares</h1>
+    <h1 data-aos="fade-up">Hola este es un sitio para fans de los dólares</h1>
 
     <img src="https://media.istockphoto.com/photos/one-hundred-dollars-isolated-on-white-background-picture-id1175073173?k=20&m=1175073173&s=612x612&w=0&h=uXCTGXDUl4vJRtCAzXduWYKuLSsyrrZ-Eg9OoKpb9uI=" alt="Imágen de un dolar">
     
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
