--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <h1 data-aos="fade-up">Hola este es un sitio para fans de los dólares</h1>
+    <h2>Animaciones</h2>
 
     <img src="https://media.istockphoto.com/photos/one-hundred-dollars-isolated-on-white-background-picture-id1175073173?k=20&m=1175073173&s=612x612&w=0&h=uXCTGXDUl4vJRtCAzXduWYKuLSsyrrZ-Eg9OoKpb9uI=" alt="Imágen de un dolar">
     
